--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="https://bootswatch.com/5/superhero/bootstrap.css" rel="stylesheet">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -29,7 +30,7 @@
       <!-- will be filled in by JS -->
     </section>
 
-    <section id="episodesArea" style="display: none">
+    <section id="episodesArea" class="hidden">
       <h3>Episodes</h3>
       <ul id="episodesList"><!-- will be filled in by JS --></ul>
     </section>
